# config

./: .gitignore  Makefile  README.md  mimeapps.list  rcrc  set.sh  set_wsl.sh  starship.toml
alacritty/: alacritty.toml  alacritty.yml
autostart/: LINE.desktop  TelegramDesktop.desktop  TogglDesktop.desktop  appimagekit_95958a6fe5fc6699c47e9e75e00a7ab4-Paymo_Widget.desktop  clickup.desktop  gajim.desktop  thunderbird.desktop  ticktick.desktop
autostart-i3/: Focus_To-Do.desktop  authy.desktop  brave.desktop  clickup.desktop  code.desktop  linear.desktop  logseq.desktop  misskey.desktop  nheko.desktop  obsidian.desktop  slack.desktop  todoist.desktop  vivaldi-stable.desktop
bat/: config
cmus/: lib.pl  rc
dunst/: dunstrc
fcitx5/: config  profile
feh/: .fehbg  fehbg
felix/: config.yaml
fontconfig/: fonts.conf
fontconfig/conf.d/: 30-icons.conf
gh/: config.yml
gitui/: theme.ron.old
gtk-3.0/: settings.ini
gwq/: config.toml
home-manager/: flake.nix  home.nix
hypr/: hyprland.conf  hyprpaper.conf
i3/: config
i3blocks/: config
kitty/: kitty.conf
lazygit/: config.yml
memo/: config.toml
mise/: config.toml
mpd/: mpd.conf
ncmpcpp/: config
neofetch/: config.conf
nvim/: dein.toml  dein_lazy.toml  init.vim
nvim/colors/: colors.vim
nvim/plugin/: coc.vim  fzf-preview.vim  lightline.vim  orgmode.lua  vimtex.vim  vista.vim
nvim/plugins/: dein.toml  dein_lazy.toml  lightline.rc.vim  nvim-treesitter.rc.vim  plugin-lightline.vim  plugin-vim-gista.vim  plugin-vista.vim
nvim/plugins/lua/: plugin-indent-blankline.lua  plugin-lspkind.lua  plugin-lspsaga.lua  plugin-nvim-lsp.lua  plugin-rust-tools.lua  plugin-todo-comments.lua  (+2 more)
nvim/rc/: color.rc.vim  dein.toml  dein_lazy.toml  filetype.rc.vim  filetype.vim  indent.rc.vim  settings.rc.vim  settings.vim
opencode/skills/: .gitignore
picom/: picom.conf
polybar/: config
ranger/: rc.conf
ranger/colorschemes/: mycolor.py
rbw/: config.json
rofi/: catppuccin-mocha.rasi  config.rasi
sway/: config
xmonad/: .xmobarrc  hie.yaml  stack.yaml  xmonad-config.cabal  xmonad.hs
xremap/: config.yml
yazi/: theme.toml  yazi.toml
zathura/: zathurarc
