cabal-version:       2.2

name:                xmonad-config
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hitalin/config#readme
license:             BSD-3-Clause
license-file:
author:              hitalin
maintainer:          hitalin@users.noreply.github.com
copyright:           2024 KIYOSE izumu
category:            Simple
build-type:          Simple
extra-source-files:

executable xmonad-x86_64-linux
  hs-source-dirs:      .
  main-is:             xmonad.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, xmonad, xmonad-contrib, xmobar, X11, containers
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
